[develop]
script_dir=$base/lib/rosshow
[install]
install_scripts=$base/lib/rosshow
[options]
zip_safe = True
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
    setuptools
    ros2cli
    numpy
    pillow
    requests
[options.entry_points]
ros2cli.command = 
    show = rosshow.command.show:ShowCommand